--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 google-adk==0.5.0
-litellm
+litellm==1.72.7
 fastapi>=0.68.0
 uvicorn>=0.15.0
 python-dotenv>=0.19.0
@@ -7,3 +7,4 @@ pydantic>=1.8.0
 requests>=2.26.0
 markdown>=3.3.0
 python-multipart>=0.0.5
+deprecated==1.2.18
